Vinderkode bug er fixet, spillet slutter når der er en vinder eller hvis den ender uafgjort og timeren stopper når spillet slutter

--- a/styles.css
+++ b/styles.css
@@ -165,8 +165,8 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 1000px;
-  height: 600px;
+  width: 500px;
+  height: 300px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
@@ -196,8 +196,8 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 1000px;
-  height: 600px;
+  width: 500px;
+  height: 300px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
@@ -227,8 +227,8 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 1000px;
-  height: 600px;
+  width: 500px;
+  height: 300px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
